fixed header and body alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,10 +3,11 @@ html, body {
   margin: 0px;
 }
 
-.item1 {
+/*.item1 {
   grid-area: header;
   background-color: white;
-}
+}*/
+
 .item2 {
   color: white;
   grid-area: menu;
@@ -21,20 +22,17 @@ html, body {
   grid-area: details;
   background-color: white;
 }
-.item5 {
-  grid-area: footer;
-  background-color: white
-}
 
 .grid-container {
   min-height: 100%;
   display: grid;
+  grid-template-columns: repeat(5, 1fr);
   grid-template-areas:
-  'menu header header header details'
   'menu main main main details'
   'menu main main main details'
   'menu main main main details'
-  'menu footer footer footer details';
+  'menu main main main details'
+  'menu main main main details';
   grid-gap: 2px;
   background-color: #404040;
   padding: 5px;
